# pre-commit

./: .pre-commit-config.yaml  LICENSE  config-example.txt  flake_example.py  interrogate_example.py  isort_example.py  long_function.py  pyproject.toml
